--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -9,9 +9,9 @@
       </p>
     </div>
   </div>
-  <div class="row text-center mb-4">
+  <div class="row text-center mb-4 g-3">
     <div class="col-md-4 mb-3">
-      <div class="card h-100">
+      <div class="card h-100 feature-card-primary themed-card">
         <img src="https://cdn-icons-png.flaticon.com/512/29/29302.png" alt="Variedad" class="card-img-top p-4" style="height: 100px; object-fit: contain;">
         <div class="card-body">
           <h5 class="card-title">Variedad de géneros</h5>
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="col-md-4 mb-3">
-      <div class="card h-100">
+      <div class="card h-100 feature-card-secondary themed-card">
         <img src="https://cdn-icons-png.flaticon.com/512/1828/1828884.png" alt="Recomendaciones" class="card-img-top p-4" style="height: 100px; object-fit: contain;">
         <div class="card-body">
           <h5 class="card-title">Recomendaciones personalizadas</h5>
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div class="col-md-4 mb-3">
-      <div class="card h-100">
+      <div class="card h-100 feature-card-warn themed-card">
         <img src="https://cdn-icons-png.flaticon.com/512/1077/1077035.png" alt="Envíos" class="card-img-top p-4" style="height: 100px; object-fit: contain;">
         <div class="card-body">
           <h5 class="card-title">Envíos rápidos</h5>
