--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,5 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<main class="app-main">
+  <router-outlet></router-outlet>
+</main>
+<app-footer></app-footer>
